// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Rating /> renders correctly with custom classes 1`] = `
<div
  className="test-rating rating test-hovered rating-can-be-hovered"
>
  <SvgStar
    className="test-star rating-star test-empty empty-star"
    height={16}
    key="5"
    onClick={[Function]}
    width={16}
  />
  <SvgStar
    className="test-star rating-star test-empty empty-star"
    height={16}
    key="4"
    onClick={[Function]}
    width={16}
  />
  <SvgStar
    className="test-star rating-star test-empty empty-star"
    height={16}
    key="3"
    onClick={[Function]}
    width={16}
  />
  <SvgStar
    className="test-star rating-star test-half half-star"
    height={16}
    key="2"
    onClick={[Function]}
    width={16}
  />
  <SvgStar
    className="test-star rating-star test-full full-star"
    height={16}
    key="1"
    onClick={[Function]}
    width={16}
  />
</div>
`;

exports[`<Rating /> renders correctly with settings 1`] = `
<div
  className="rating rating-can-be-hovered"
>
  <SvgStar
    className="rating-star empty-star"
    height={7}
    key="7"
    onClick={[Function]}
    width={7}
  />
  <SvgStar
    className="rating-star empty-star"
    height={7}
    key="6"
    onClick={[Function]}
    width={7}
  />
  <SvgStar
    className="rating-star empty-star"
    height={7}
    key="5"
    onClick={[Function]}
    width={7}
  />
  <SvgStar
    className="rating-star empty-star"
    height={7}
    key="4"
    onClick={[Function]}
    width={7}
  />
  <SvgStar
    className="rating-star half-star"
    height={15}
    key="3"
    onClick={[Function]}
    width={15}
  />
  <SvgStar
    className="rating-star full-star"
    height={7}
    key="2"
    onClick={[Function]}
    width={7}
  />
  <SvgStar
    className="rating-star full-star"
    height={7}
    key="1"
    onClick={[Function]}
    width={7}
  />
</div>
`;

exports[`<Rating /> renders correctly without params 1`] = `
<div
  className="rating"
>
  <SvgStar
    className="rating-star empty-star"
    height={16}
    key="5"
    onClick={[Function]}
    width={16}
  />
  <SvgStar
    className="rating-star empty-star"
    height={16}
    key="4"
    onClick={[Function]}
    width={16}
  />
  <SvgStar
    className="rating-star empty-star"
    height={16}
    key="3"
    onClick={[Function]}
    width={16}
  />
  <SvgStar
    className="rating-star empty-star"
    height={16}
    key="2"
    onClick={[Function]}
    width={16}
  />
  <SvgStar
    className="rating-star empty-star"
    height={16}
    key="1"
    onClick={[Function]}
    width={16}
  />
</div>
`;
